<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detalhePacoteViewModel"
            type="com.mobicare.viajabessa.fragments.detalhepacote.DetalhePacoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.detalhepacote.DetalhePacoteFragment">

        <ImageView
            android:id="@+id/imgPktDetalhe"
            android:layout_width="311dp"
            android:layout_height="119dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imagem_do_pacote"
            android:src="@android:drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitPkt" />

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:fontFamily="serif"
            android:text="@string/comprar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDesc" />

        <TextView
            android:id="@+id/txtTitPkt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:text="@{detalhePacoteViewModel.titulo}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:text="Título Pacote" />

        <TextView
            android:id="@+id/txtValorDetalhe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{detalhePacoteViewModel.valor}"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtTitPkt"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            tools:text="Valor
" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="312dp"
            android:layout_height="153dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:text="@{detalhePacoteViewModel.descricao}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:text="Detalhes do Pacote" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="serif"
            android:text="@string/pacote"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:fontFamily="serif"
            android:text="@string/valor"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="33dp"
            android:fontFamily="serif"
            android:text="@string/descri_o_do_pacote"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPktDetalhe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>