<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pacote"
            type="com.mobicare.viajabessa.fragments.home.Pacote" />
        <variable
            name="clickListener"
            type="com.mobicare.viajabessa.fragments.home.HomeListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(pacote)}">

        <TextView
            android:id="@+id/txtTituloPkt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="serif-monospace"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imgPkt"
            app:layout_constraintTop_toTopOf="parent"
            app:titulo="@{pacote}"
            tools:text="@string/nome_do_pacote_t_tulo" />

        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="serif-monospace"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imgPkt"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloPkt"
            app:valor="@{pacote}"
            tools:text="@string/valor_do_pacote" />

        <ImageView
            android:id="@+id/imgPkt"
            android:layout_width="101dp"
            android:layout_height="76dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagem_do_pacote"
            app:imageUrl="@{pacote}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>